--- a/Projet-Fil-Rouge/src/app/update-employee/update-employee.component.html
+++ b/Projet-Fil-Rouge/src/app/update-employee/update-employee.component.html
@@ -1,6 +1,6 @@
 
 <h3>Mise A Jour Employee</h3>
-<div [hidden]="submitted" style="width: 400px;">
+<div style="width: 400px;">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Prenom</label>
