--- a/hydcloud/Front/src/app/app.component.html
+++ b/hydcloud/Front/src/app/app.component.html
@@ -1,23 +1,22 @@
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style=" display:inline-block;">
+    <nav class="navbar navbar-expand-lg navbar-light" style=" display:inline-block;">
         <!-- Links -->
         <ul class="navbar">
             <li class="nav-item">
-                <a routerLink="employees" class="nav-link" routerLinkActive="active">Liste d Employees</a>
+                <a routerLink="employees" class="nav-link" routerLinkActive="active">Liste des employés</a>
             </li>
             <li class="nav-item">
-                <a routerLink="add" class="nav-link" routerLinkActive="active">Ajouter Employee</a>
+                <a routerLink="add" class="nav-link" routerLinkActive="active">Ajouter des employés</a>
             </li>
             <li class="nav-item">
-                <a routerLink="produits" class="nav-link" routerLinkActive="active">Liste de Produits</a>
+                <a routerLink="produits" class="nav-link" routerLinkActive="active">Liste de produits</a>
             </li>
             <li class="nav-item">
-                <a routerLink="addP" class="nav-link" routerLinkActive="active">Ajouter Produit</a>
+                <a routerLink="addP" class="nav-link" routerLinkActive="active">Ajouter des produits</a>
             </li>
         </ul>
     </nav>
 </div>
-
 
 <div class="container">
     <br>
