--- a/hydcloud/Front/src/app/create-produit/create-produit.component.html
+++ b/hydcloud/Front/src/app/create-produit/create-produit.component.html
@@ -1,4 +1,4 @@
-<h3>Creer un produit</h3>
+<h3>Créer un produit</h3>
 <div [hidden]="submitted" style="width: 400px;">
     <form (ngSubmit)="onSubmit()">
         <div class="form-group">
