--- a/hydcloud/Front/src/styles.css
+++ b/hydcloud/Front/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
-body {
+.body {
     font-size: 15px;
     color: $gray-900;
     height: 100%;
@@ -22,21 +22,39 @@ body {
     color: white;
 }
 
-h3 {
+h2 {
     font-size: 20px;
     font-weight: 800;
     @include sans-serif-font;
 }
 
+h4 {
+    font-size: 14px;
+    @include sans-serif-font;
+}
+
 .bg {
     background-image: url('/assets/img/home-bg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-position: initial;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.8;
     position: fixed;
+    height: 100vh%;
     left: 0;
     width: 100%;
     top: 0;
+}
+
+.footer {
+    flex-shrink: 0;
+    flex-grow: 0;
+    background: rgb(255, 255, 255);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding-top: 50px;
+    height: 20%;
+    text-align: center;
+    padding: 50px 0 65px;
 }
