--- a/hydcloud/Front/src/app/create-employee/create-employee.component.html
+++ b/hydcloud/Front/src/app/create-employee/create-employee.component.html
@@ -2,7 +2,7 @@
 <div [hidden]="submitted" style="width: 400px;">
     <form (ngSubmit)="onSubmit()">
         <div class="form-group">
-            <label for="name">Prenom</label>
+            <label for="name">Prénom</label>
             <input type="text" class="form-control" id="firstName" required [(ngModel)]="employee.firstName" name="firstName">
         </div>
 
