--- a/hydcloud/Front/src/app/employee-list/employee-list.component.html
+++ b/hydcloud/Front/src/app/employee-list/employee-list.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h2>Liste des employés</h2>
+            <h3>Liste des employés</h3>
         </div>
         <div class="panel-body">
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>Prenom</th>
+                        <th>Prénom</th>
                         <th>Nom</th>
                         <th>Email</th>
                         <th>Actions</th>
