--- a/hydcloud/Front/src/app/app.component.html
+++ b/hydcloud/Front/src/app/app.component.html
@@ -20,7 +20,8 @@
 
 <div class="container">
     <br>
-    <h2 style="text-align: center;">{{title}}</h2>
+    <h2 style="text-align: center;">{{title1}}</h2>
+    <h3 style="text-align: center;">{{title2}}</h3>
     <hr>
     <div class="card">
         <div class="card-body">
