--- a/hydcloud/Front/src/app/produit-list/produit-list.component.html
+++ b/hydcloud/Front/src/app/produit-list/produit-list.component.html
@@ -1,12 +1,12 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <h3>Liste de Produits</h3>
+        <h3>Liste de produits</h3>
     </div>
     <div class="panel-body">
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Nom Du Produit</th>
+                    <th>Nom du produit</th>
                     <th>Description</th>
                 </tr>
             </thead>
