--- a/hydcloud/Front/src/styles.css
+++ b/hydcloud/Front/src/styles.css
@@ -14,7 +14,6 @@
     text-align: center;
     width: 100%;
     height: 100%;
-    padding: 13px;
 }
 
 .nav-link {
@@ -38,7 +37,6 @@ h4 {
     background-position: initial;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.8;
     position: fixed;
     height: 100vh%;
     left: 0;
@@ -57,4 +55,8 @@ h4 {
     height: 20%;
     text-align: center;
     padding: 50px 0 65px;
+}
+
+.card {
+    opacity: 0.8;
 }
