--- a/ProjetFilRouge-Front/src/styles.css
+++ b/ProjetFilRouge-Front/src/styles.css
@@ -1,13 +1,62 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
+.body {
+    font-size: 15px;
+    color: $gray-900;
+    height: 100%;
+    @include serif-font;
+}
+
+.navbar {
+    font-weight: 800;
+    list-style-type: none;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+
+.nav-link {
+    font-size: 20px;
+    color: white;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: 800;
+    @include sans-serif-font;
+}
+
+h4 {
+    font-size: 14px;
+    @include sans-serif-font;
+}
+
+.bg {
+    background-image: url('~/assets/img/home-bg.jpg');
+    background-position: initial;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    height: 100vh%;
+    left: 0;
+    width: 100%;
+    top: 0;
+}
 
 .footer {
-    position: absolute;
+    flex-shrink: 0;
+    flex-grow: 0;
+    background: rgb(255, 255, 255);
+    position: fixed;
     bottom: 0;
-    width:100%;
-    height: 70px;
-    background-color: blue;
+    width: 100%;
+    padding-top: 50px;
+    height: 20%;
     text-align: center;
-    color: white;
+    padding: 50px 0 65px;
+}
+
+.card {
+    opacity: 0.8;
 }
